# Load-s-Search

./: .gitignore  LICENSE  README.md  config.schema.json  pyproject.toml  requirements.txt  run_gui.py  run_skeleton.py
src/loads_search/: __init__.py  activity_logger.py  cli.py  config.py  crawler.py  gui.py  indexer.py  metadata.py  paths.py
src/loads_search/assets/: README.txt
