[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "loads-search"
version = "0.1.0"
description = "Local search and memory for your files and activity"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "Whoosh>=2.7.4",
    "python-docx>=1.0.0",
]

[project.scripts]
loads-search = "loads_search.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
